# job-tracker

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
job_tracker/: __init__.py  analytics.py  automation.py  cli.py  models.py
scripts/: run_reminders.py  seed_data.py
tests/: test_tracker.py
